--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -10,6 +10,7 @@
   %b Sort order:
   = @page.sort_order
 
-= link_to 'Edit', edit_page_path(@page)
-\|
-= link_to 'Back', pages_path
+%p
+  %b content-areas:	
+    - for content_area in @page.content_areas do
+      %p= content_area.name
