--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -26,6 +26,8 @@ form.bp
   // You'll probably want to remove the scaffolding once you start styling your site.
   +blueprint-scaffolding
 
+$sidebar-columns: floor($blueprint-grid-columns / 4)
+
 // Page layout can be done using mixins applied to your semantic classes and IDs:
 body.two-col
   #container
@@ -34,12 +36,13 @@ body.two-col
     +column($blueprint-grid-columns)
   #sidebar
     // One third of the grid columns, rounding down. With 24 cols, this is 8.
-    $sidebar-columns: floor($blueprint-grid-columns / 3)
+    // $sidebar-columns: floor($blueprint-grid-columns / 3)
     +column($sidebar-columns)
   #content
     // Two thirds of the grid columns, rounding up.
     // With 24 cols, this is 16.
-    $content-columns: ceil(2 * $blueprint-grid-columns / 3)
+    // $content-columns: ceil(2 * $blueprint-grid-columns / 3)
+    $content-columns: ($blueprint-grid-columns - $sidebar-columns)
     // true means it's the last column in the row
     +column($content-columns, true)
 
