--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -38,7 +38,7 @@
     #container
       #header
         %ul#topnav
-          %li= link_to "/link1","javascript:void(0);"
+          %li= link_to "/link1","http://google.com"
           %li= link_to "/link2","javascript:void(0);"
           %li= link_to "/link3","javascript:void(0);"
       
